--- a/carApiProject/data/pom.xml
+++ b/carApiProject/data/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>data</name>
+    <description>data</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
