--- a/carApiProject/api/pom.xml
+++ b/carApiProject/api/pom.xml
@@ -10,10 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+
+    <name>api</name>
+    <description>api</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-
+    <dependencies></dependencies>
 </project>
