--- a/carApiProject/core/pom.xml
+++ b/carApiProject/core/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>core</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>core</name>
+    <description>core</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
