basic response implementation

--- a/carApiProject/core/pom.xml
+++ b/carApiProject/core/pom.xml
@@ -11,6 +11,20 @@
 
     <artifactId>core</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.example.projectapi</groupId>
+            <artifactId>api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.example.projectapi</groupId>
+            <artifactId>data</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <name>core</name>
     <description>core</description>
 
